styled css and added media query to make sure website looks good on smaller devices

--- a/style.css
+++ b/style.css
@@ -86,3 +86,25 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 45px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    text-align: center;
+    font-size: 30px;
+  }
+
+  p {
+    text-align: center;
+  }
+
+  .app-link {
+    display: block;
+    text-align: center;
+    margin: 0 25px;
+  }
+}
